Add the users hosted parties

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -34,12 +34,22 @@
   <p>Parties you're invited to:</p>
     <ul><% @watching_party.each do |party| %>
       <li>
-        Title: <%= party.movie_title %>,
-        Duration: <%= party.length %> minutes,
-        Date: <%= party.date_of_party.strftime("%m/%d/%Y") %>,
-        Time: <%= party.time_of_party.strftime("%H:%M") %> UTC
+        Title: <%= party.movie_title %> |
+        Duration: <%= party.length %> minutes |
+        Date: <%= party.date_of_party.strftime("%m/%d/%Y") %> |
+        Time: <%= party.time_of_party.strftime("%H:%M") %> UTC |
+        Invited by: <%= User.find("#{party.host_id}").email %>
       <% end %>
       </li>
     </ul>
   <p>Parties you're hosting:</p>
+  <ul><% @hosting_party.each do |party| %>
+    <li>
+      Title: <%= party.movie_title %> |
+      Duration: <%= party.length %> minutes |
+      Date: <%= party.date_of_party.strftime("%m/%d/%Y") %> |
+      Time: <%= party.time_of_party.strftime("%H:%M") %> UTC
+    <% end %>
+    </li>
+  </ul>
 </section>
