--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome to Viewing Party</h1>
-<h2>"Welome! We're Glad You're Here! At Viewing Party, we make it easy to watch a movie with friends from the world. Let's get started!"</h2>
+<h2>Welome! We're Glad You're Here! At Viewing Party, we make it easy to watch a movie with friends from around the world.</h2>
+<h3><u>Log in Below or Create a New Account</u></h3>
 <%= form_with url: "/", method: :post, local: true do |form| %>
   <%= form.label :email, 'Email:' %>
   <%= form.text_field :email %>
