--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,6 +2,7 @@
 <%= button_to "Create Viewing Party For Movie", "/parties/new", params: { :movie_id => params[:id] }, method: :get %>
 <h2>Title: <%=@movie[:original_title] %></h2>
 </br>
+<%= image_tag "https://image.tmdb.org/t/p/w500/#{@movie[:poster_path]}" %>
 <h2>Runtime: <%=@movie[:runtime] %></h2>
 </br>
 <% if @movie[:genres] == nil || @movie[:genres] == [] %>
@@ -29,7 +30,7 @@
 <h2>Characters and Cast: <%@cast[:cast].take(10).map do |member|%>
                           <h2><%="#{member[:character]} is played by Actor/Actress #{ member[:name]}."%></h2>
                           <%end%>
-</br>    
+</br>
 
 
   <% if @reviews[:results] == nil || @reviews[:results] == [] %>
@@ -38,5 +39,5 @@
     <h2>Reviews: <%@reviews[:results].each do |result|%><h2>
       <h2>Author: <%=result[:author]%><h2>
       <h2>Content: <%=result[:content]%><h2>
-    <%end%>  
+    <%end%>
   <%end%>
