--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,7 +53,33 @@ footer {
     margin: auto;
     margin-bottom: 2rem;
 }
+.nav_buttons_two {
+    display: flex;
+    justify-content: center;
+    justify-self: center ;
+    flex-direction: column;
+    align-items: center;
+    background: rgba(128, 225, 244, .33);
+    max-width: 50%; 
+    margin: auto;
+    margin-bottom: 2rem;
+}
 
+.nav_buttons_three {
+    display: flex;
+    justify-content: center;
+    justify-self: center ;
+    flex-direction: column;
+    align-items: center;
+    background: rgba(128, 225, 244, .33);
+    max-width: 75%; 
+    margin: auto;
+    margin-bottom: 2rem;
+}
+.direction{
+  background-color:rgba(226, 117, 54, 0.33);
+  text-align: right;
+}
 #login {
   display: flex;
   align-items: center;
@@ -66,7 +92,10 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 1rem 4rem 2rem;
-  
+}
+
+.title {
+  font-family: 'Handlee', cursive;
 }
 
 form {
@@ -77,4 +106,25 @@ form {
 
 input {
   font-family: 'Handlee', cursive;
+}
+
+.dashboard_info {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card {
+    background-color:rgba(226, 117, 54, 0.33);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 35%;
+}
+
+img {
+  max-width: 10%;
+}
+
+.movie_display{
+  font-size: 8pt;
 }
