--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,43 +9,44 @@
       <%= f.submit "Add friend" %>
     <% end %>
   </div>
-  <h3>Friends</h3>
-  <% if @user.friends.count == 0 %>
-    You currently have no friends.
-  <% else %>
-    <ul>
-      <% @user.friends.uniq.each do |friend| %>
-        <li>
-          <%= friend.email %>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-</section>
 
-<section id="party_card">
-  <h3>
-    Viewing Parties
-  </h3>
-  <p>Parties you're invited to:</p>
-    <ul><% @watching_party.each do |party| %>
-      <li>
+<section class='dashboard_info'>
+  <div>
+    <h2 class="title">Friends</h2>
+    <% if @user.friends.count == 0 %>
+      <h3>You currently have no friends. Why not add some now?<h3>
+    <% else %>
+      <ul>
+        <% @user.friends.uniq.each do |friend| %>
+          <h3><span>&#x1F3A5</span> <%=friend.email %></h3>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
+  <div>
+    <h2 class="title">Viewing Parties</h2>
+    <div>
+    <h3 class="title">Parties you're invited to:</h3>
+      <% @watching_party.each do |party| %>
+        <p class='card'>
+          Title: <%= link_to "#{party.movie_title}", "/movies/#{party.movie.api_id}", method: :get %> |
+          Duration: <%= party.length %> minutes |
+          Date: <%= party.date_of_party.strftime("%m/%d/%Y") %> |
+          Time: <%= party.time_of_party.strftime("%H:%M") %> UTC |
+          Invited by: <%= User.find("#{party.host_id}").email %>
+        <% end %>
+        </p>
+        </div>
+        <div>
+    <h3 class="title">Parties you're hosting:</h3>
+    <% @hosting_party.each do |party| %>
+      <p class="card">
         Title: <%= link_to "#{party.movie_title}", "/movies/#{party.movie.api_id}", method: :get %> |
         Duration: <%= party.length %> minutes |
         Date: <%= party.date_of_party.strftime("%m/%d/%Y") %> |
-        Time: <%= party.time_of_party.strftime("%H:%M") %> UTC |
-        Invited by: <%= User.find("#{party.host_id}").email %>
+        Time: <%= party.time_of_party.strftime("%H:%M") %> UTC
       <% end %>
-      </li>
-    </ul>
-  <p>Parties you're hosting:</p>
-  <ul><% @hosting_party.each do |party| %>
-    <li>
-      Title: <%= link_to "#{party.movie_title}", "/movies/#{party.movie.api_id}", method: :get %> |
-      Duration: <%= party.length %> minutes |
-      Date: <%= party.date_of_party.strftime("%m/%d/%Y") %> |
-      Time: <%= party.time_of_party.strftime("%H:%M") %> UTC
-    <% end %>
-    </li>
-  </ul>
+      </p>
+    </div>
+    </div>
 </section>
