--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,15 +2,15 @@
   <h1 class='welcome'>Welcome to Viewing Party</h1>
   <div id='login'>
     <h2>At Viewing Party, we make it easy to watch a movie with friends from the world.<br/>Let's get started!</h2>
-    <div id='login_form'>
+    <div id='login_form' class='login-form'>
     <%= form_with url: "/", method: :post, local: true do |form|%>
       <%= form.label :email, 'Email:' %>
       <%= form.text_field :email %>
-      <br/>
+
       <%= form.label :password, 'Password:' %>
       <%= form.password_field :password %>
-      <%= form.submit 'Log In' %>
-    <% end %>
+      <div id="login-button"><%= form.submit 'Log In' %></div>
+    <% end %><br>
 
     <%= link_to "New to Viewing Party? Register Here", "/register" %>
     </div>
