--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,7 +48,7 @@ footer {
     justify-self: center ;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(0 0 0 / 82%);
+    background-color: black;
     margin: auto;
     margin-bottom: 2rem;
 }
@@ -58,7 +58,7 @@ footer {
     justify-self: center ;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(0 0 0 / 82%);
+    background-color: black;
     max-width: 50%;
     margin: auto;
     margin-bottom: 2rem;
@@ -70,7 +70,7 @@ footer {
     justify-self: center ;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(0 0 0 / 82%);
+    background-color: black;
     max-width: 75%;
     margin: auto;
     margin-bottom: 2rem;
@@ -84,7 +84,7 @@ footer {
   justify-self: center;
   border-radius: 10px;
   text-align: center;
-  background-color: rgb(0 0 0 / 82%);
+  background-color: black;
   flex-direction: column;
   backdrop-filter: blur(6px);
   position: fixed;
@@ -123,7 +123,7 @@ input {
 }
 
 .card {
-  background-color: rgb(0 0 0 / 82%);
+  background-color: black;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -165,7 +165,7 @@ a:hover {
   width: 323px;
 }
 
-/* .footer {  
+/* .footer {
    bottom : 2px;
    height : 40px;
    margin-top : 40px;
