--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,30 +56,46 @@ footer {
   list-style-type: circle;
   box-shadow: -1px 0px 4px 0px black;
   opacity: 0.90;
-
 }
 .nav_buttons_two {
-    display: flex;
-    justify-content: center;
-    justify-self: center ;
-    flex-direction: column;
-    align-items: center;
-    background-color: black;
-    max-width: 50%;
-    margin: auto;
-    margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  border-radius: 10px;
+  text-align: center;
+  background-color: black;
+  flex-direction: column;
+  backdrop-filter: blur(6px);
+  top: 50%;
+  left: 50%;
+  list-style-type: circle;
+  box-shadow: -1px 0px 4px 0px black;
+  opacity: 0.90;
+}
+
+img.poster{
+  height: 200px;
+  width: 200px;
+}
+
+img.footer {
+  max-width: 5%;
 }
 
 .nav_buttons_three {
-    display: flex;
-    justify-content: center;
-    justify-self: center ;
-    flex-direction: column;
-    align-items: center;
-    background-color: black;
-    max-width: 75%;
-    margin: auto;
-    margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  border-radius: 10px;
+  text-align: center;
+  background-color: black;
+  flex-direction: column;
+  backdrop-filter: blur(6px);
+  top: 50%;
+  left: 50%;
+  list-style-type: circle;
+  box-shadow: -1px 0px 4px 0px black;
+  opacity: 0.90;
 }
 .direction{
   text-align: right;
@@ -144,6 +160,21 @@ footer {
   list-style-type: circle;
 }
 
+.movies{
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center;
+  opacity: .90;
+  backdrop-filter: blur(6px);
+  box-shadow: -1px 0px 4px 0px black;
+  align-items: center;
+  justify-self: center;
+  border-radius: 10px;
+  padding: 1rem 4rem 2rem;
+}
+
 .dashboard_info {
     display: flex;
     justify-content: space-evenly;
@@ -156,12 +187,20 @@ footer {
 }
 
 form {
-  display: inline-flex;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  border-radius: 10px;
+  text-align: center;
+  background-color: black;
   flex-direction: column;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  align-items: flex-start;
-    }
+  backdrop-filter: blur(6px);
+  top: 50%;
+  left: 50%;
+  list-style-type: circle;
+  box-shadow: -1px 0px 4px 0px black;
+  opacity: 0.90;
+  }
 
 input {
   font-family: sans-serif;
@@ -173,12 +212,24 @@ input {
   border-radius: 5px;
 }
 
-img {
-  max-width: 10%;
+.movie_display{
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  border-radius: 10px;
+  text-align: center;
+  background-color: black;
+  flex-direction: column;
+  backdrop-filter: blur(6px);
+  top: 50%;
+  left: 50%;
+  list-style-type: circle;
+  box-shadow: -1px 0px 4px 0px black;
+  opacity: 0.90;
 }
 
-.movie_display{
-  font-size: 8pt;
+.button{
+  text-align: center;
 }
 
 a:link {
@@ -219,6 +270,11 @@ a:hover {
 
 footer{
   bottom: 0;
-  position: fixed;
+  position: static;
   width: 100%;
+}
+
+.alert-info{
+  font-weight: bold;
+  color: gold;
 }
